Fix: Prosemirror fullscreen overlaps view

--- a/static/less/richtext.less
+++ b/static/less/richtext.less
@@ -2,8 +2,8 @@
   position:fixed;
   top:0;
   left:0;
-  width:100%;
-  height:100%;
+  width:100vw;
+  height:calc(100vh - 3px);
   z-index: 9998;
 
   .ProseMirror-menubar-wrapper {
